huge merge of 'add charges' to 'mark_as_processed' with lots of conflicts: first attempt at using kdiff3 to merge, probably with mistakes

--- a/reebill/ui/billedit.css
+++ b/reebill/ui/billedit.css
@@ -152,6 +152,11 @@ pre.code{
     font-style: italic;
     color: red;
 }
+.reebill-grid-processed {
+    font-style: italic;
+    color: green;
+}
+
 
 /* styles for utilbill grid rows */
 .utilbill-grid-processed {
