--- a/reebill/ui/billedit.css
+++ b/reebill/ui/billedit.css
@@ -156,7 +156,10 @@ pre.code{
     font-style: italic;
     color: green;
 }
-
+.charge-error {
+    color: red;
+    font-style: bold;
+}
 
 /* styles for utilbill grid rows */
 .utilbill-grid-processed {
