75043112 Show Error message

--- a/reebill/ui/static/style/style.css
+++ b/reebill/ui/static/style/style.css
@@ -27,6 +27,11 @@
     color: blue;
 }
 
+.ratestructure-grid-error{
+    font-weight: bold;
+    color: red;
+}
+
 .messageBoxOverflow .x-box-inner .x-box-inner {
     overflow: auto;
 }
