--- a/reebill/ui/static/style/style.css
+++ b/reebill/ui/static/style/style.css
@@ -39,3 +39,7 @@
 .x-grid-row-summary .x-grid-cell .x-grid-cell-inner{
     font-weight: bold !important;
 }
+
+.panel-noborder > .x-panel > .x-panel-body {
+    border: 0px !important
+}
