78736410 implemented: Add overflow handlers to toolbars

--- a/reebill/ui/static/style/style.css
+++ b/reebill/ui/static/style/style.css
@@ -59,3 +59,9 @@
     border-top: 0 !important;
     top: 23px !important;
 }
+
+.x-menu-item-icon{
+    display: inline-block !important;
+    position: relative !important;
+    margin-right: 5px !important;
+}
